--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ after_success:
   - docker build -t theti/multi-server ./server
   - docker build -t theti/multi-worker ./worker
   # Login to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORT" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push theti/multi-client
   - docker push theti/multi-nginx
