--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ deploy:
   region: 'us-east-2'
   app: 'multi-docker'
   env: 'MultiDocker-env'
-  bucket_name: 'elasticbeanstalk-us-east-2-454403129518',
+  bucket_name: 'elasticbeanstalk-us-east-2-454403129518'
   bucket_path: 'docker-multi'
   on:
     branch: master
